# SIMON8

./: .gitignore  CMakeLists.txt
inc/: renderer.h
src/: main.cpp  renderer.cpp
